--- a/doc/src/commoncomponents.dox
+++ b/doc/src/commoncomponents.dox
@@ -1,33 +1,31 @@
-/*! \page commoncomponents Common Components
+/*! \page commoncomponents Common components
 
-\section components Components
+\section components Introduction
 
 \em A "common component" is a reusable element of the MeeGo Handset user interface. Typical components include
 the standard UI controls such as buttons, sliders, and lists, as well as the more complex dialogs and menus.
 
-Components are also \a widgets (specifically QGraphicsWidgets) and can be used anywhere a widget can, but
-common components also have some unique features that means not every widget is a component:
+Components are also \a widgets (specifically QGraphicsWidgets) and can be used wherever widgets can be used. However, all widgets cannot be regarded as components due to some unique features that common components have.
 
-\section componentfeatures Common component features
+\section componentfeatures Features of common components
+
+Common components have the following features:
 
 - Components provide a consistent experience that fits the MeeGo Handset design
 - All components are designed for finger use
-- Components scale to physical sizes (i.e. millimeters instead of pixels), regardless of the device resolution or pixel density
+- Components scale to physical sizes (in other words, millimeters instead of pixels), regardless of the device resolution or pixel density
 - Components are fully stylable through CSS
-- The entire look and feel implementation of a component is exchangable through theming while keeping the existing API
-- Components may have alternative versions (look and feel) for different uses
+- You can change the entire look-and-feel implementation of a component through theming while keeping the existing API
+- Components may have alternative versions (look-and-feel) for different purposes
 - Components always work in both landscape and portrait orientations
-- Components are performance and power consumption optimized
+- Performance and power consumption of components is optimised
 
-While applications are seldom created out of only common components, by using the common components where
-applicable instead of creating custom controls, your application will fit in with the rest of the MeeGo
-user experience. This will also help your users transfer what they have learned from other MeeGo applications
-to yours.
+While applications are not usually created of only common components, use common components instead of custom controls where applicable to ensure that your application fits in with the rest of the MeeGo user experience. This also helps your users to transfer what they have learned from other MeeGo applications to your application.
 
-\note For general MeeGo usage patterns and UI recommendations, please see:
+\note For information on general MeeGo usage patterns and UI recommendations, see:
 - <a href="http://meego.com/developers/ui-design-guidelines/handset/designing-your-application">Designing your Application</a>
 
-\section componentdetails The components
+\section componentdetails Common component types
 
 \subsection button Button
 Class: MButton
@@ -39,140 +37,131 @@ The following button types are available:
 
 \image html button.png Button
 - \b Push
-Use the push button to execute an action. The push button maintains no memory and typically exectues the same
-action each time when presssed.
+Executes an action. Push button maintains no memory and typically executes the same action each time when pressed.
 
 \image html iconbutton.png "Icon button"
 - \b Icon
-Icon buttons function like the push button, but are visually distinctive with an icon taking the usual
-place of the descriptive text. They are typically used in toolbars and other places where space is limited.
+Has the same functionality as the Push button but a different appearance, since it usually replaces descriptive text. Icon button is typically used in tool bars and other places where space is limited.
 
-\image html checkbox.png Checkbox
-- \b Checkbox
-A check box permits the user to make multiple selections from a number of options. A caption describing the meaning of the check box is shown adjacent to the check box. Inverting the state of a check box is done by tapping the box.
+\image html checkbox.png Check box
+- \b Check box
+Allows the user to make multiple selections from several options. There is a descriptive caption next to the check box. You can change the state of the check box by tapping the box.
 
 \image html switch.png Switch
 - \b Switch
-Use switches for functions that the user can set on and off.
+Allows the user to set functions on and off.
 
 \subsection list List
 Class: MList
 
 \image html list.png List
 
-A list is a container of objects displayed vertically. The list should be used when the number of items is very
-large or dynamic, otherwise consider using a <a href="layouts.html">layout</a> instead.
+Displays objects vertically. Use a list when there are numerous items or the items are subject to change. Otherwise consider using a <a href="layouts.html">layout</a> instead.
 
-The list can contain any type of QGraphicsWidget, but typically a MListItem is used.
+A list can contain any type of QGraphicsWidget, but typically a MListItem is used.
 
 \subsection textedit Text edit
 Class: MTextEdit
 
-A text edit is used for user input of text. The edit can be a single or multiple lines, or it can expand as
+Allows the user to input text. The edit include a single line or multiple lines, or it can expand if
 necessary. When a hardware keyboard is not available, the text edit interacts with the virtual on-screen input methods.
 
 \subsection label Label
 Class: MLabel
 
-A label displays a piece of text in the UI. The MeeGo Touch label supports both markup and links in labels.
+Displays text in the UI. The MeeGo Touch label supports both markup and links.
 
 \subsection image Image
 Class: MImageWidget
 
-The image represents a single picture in the UI.
+Represents a single picture in the UI.
 
 \subsection videowidget Video
 Class: MVideoWidget
 
-The video widget supports flexible playback of video in the UI. The widget can for example be rotated along with the
+Supports flexible playback of video in the UI. The widget can, for example, be rotated along with the
 rest of the UI and have transparent controls overlaid.
 
 \subsection applicationpage Application page
 Class: MApplicationPage
 
-The application page is one view of an application, navigation inside the application typically happens by
-switching between multiple pages.
+Provides one view of an application. You can typically navigate inside the application by switching between multiple pages.
 
 \subsection applicationmenu Application menu
 Class: MApplicationMenu
 
 \image html applicationmenu.png "Application menu"
 
-The application menu is typically not directly accessed, instead actions are added to an MApplicationPage. This allows
+Is typically not directly accessible. Instead, actions are added to an MApplicationPage. This allows
 the menu to be reconfigured automatically as the user switches between pages in the application.
 
-The application menu consists of a list of commands related to the current application view, or application wide commands.
+The application menu consists of a list of commands related to the current application view or the entire application.
 
 \subsection dialog Dialog
 Class: MDialog
 
 \image html dialog.png Dialog
 
-Use dialogs when you want a response from the user while blocking access to the rest of the application.
-Unlike notifications, dialogs do not disappear from the UI without user interaction.
+Requires a response from the user and blocks access to the rest of the application. Unlike notifications, dialogs do not disappear from the UI without user interaction.
 
 \subsection objectmenu Object menu
 
 \image html objectmenu.png "Object menu"
 
-An object menu is a list of contextual actions that can be performed on a certain object. The object menu
+Lists contextual actions that can be performed on a certain object. The object menu
 is automatically constructed by the MeeGo Touch framework when the <a href="gestures.html">tap and hold gesture</a>
-is used on a widget. The contents of the menu are the QActions and MActions added to the widget.
+is used on a widget. The menu consists of the QActions and MActions added to the widget.
 
 \subsection toolbar Tool bar / Tab bar
 
-\image html toolbar.png "Toolbar in landscape"
-\image html toolbar-portrait.png "Toolbar in portrait"
+\image html toolbar.png "Tool bar in landscape"
+\image html toolbar-portrait.png "Tool bar in portrait"
 
-The toolbar holds a list of the most important actions relevant to the current application page/view. The
-toolbar is reconfigured automatically based on the actions added to the currently active page.
+Tool bar lists the most important actions for the current application page/view. The tool bar is reconfigured automatically when actions are added to the currently active page.
 
-The tab bar is an alternative way of providing navigation inside an application, where the most commonly
-used UI views are directly accessible from where the toolbar would normally reside.
+Tab bar is an alternative way of providing navigation inside an application. A tab bar provides direct access to the most commonly used UI views.
 
 \subsection slider Slider
 Class: MSlider
 
 \image html slider.png Slider
 
-Use a slider for a selecting a value from a range.
+Allows the user to select from a range of values.
 
 \subsection seekbar Seekbar
 Class: MSeekbar
 
-\image html seekbar.png Seekbar
+\image html seekbar.png Seek bar
 
-The seekbar is a specialization of the slider. Unlike the slider, it supports visualizing the amount
-of currently loaded content in the set value range.
+Displays the amount of currently loaded content in a set value range. The seek bar is a specialised version of the slider.
 
-\subsection combobox Combobox
+\subsection combobox Combo box
 Class: MCombobox
 
-\image html combobox.png Combobox
-\image html combobox-open.png "Combobox opened"
+\image html combobox.png Combo box
+\image html combobox-open.png "Opened combo box"
 
-A combobox allows the user to select a value from a pop-up selection list.
+Allows the user to select a value from a pop-up list.
 
 \subsection progressindicator Progress indicator
 
-The progress indicator is used to show that an action is taking place and the expected duration thereof. If the duration
-is not known, the indicator can show this as well.
+Shows actions that are in progress and their expected durations. If the duration is not known, the indicator can show this as well.
 
 There are two types of progress indicators types:
 
 \image html progressbar.png "Progress indicator, bar"
-- Bar, a horizontal progress bar that fills up to completion, or indicates that the duration is unknown.
+- Bar, a horizontal progress bar that fills up when the action is complete or indicates that the duration is unknown.
 
 \image html spinner.png "Progress indicator, spinner"
-- Spinner, a circular progress indicator that fills up to completion, or indicates unknown duration.
+- Spinner, a circular progress indicator that fills up when the action is complete or indicates unknown duration.
 
 \subsection banner Banner
 Class: MBanner
 
 \image html banner.png Banner
 
-The banner provides a drop-in notification to the user on the screen that automatically disappears after a while.
-A banner created by an application is only visible in that single application. To create a system wide notification,
+Provides a drop-in notification to the user. A notification automatically disappears after a while.
+A banner created by an application is only visible in that specific application. To create a system-wide notification,
 use the MNotification API.
 
 */
