--- a/doc/src/pagenavigation_drilldown_example.dox
+++ b/doc/src/pagenavigation_drilldown_example.dox
@@ -1,8 +1,8 @@
-/*! \page pagenavigation_drilldown_example Drill Down Navigational Pattern Code Example
+/*! \page pagenavigation_drilldown_example Example of a drill-down navigation pattern
 
-Of all navigational patterns (drill down, application menu and tab bar) this is the easiest to implement. Since a page's escapeMode() is by default set to MApplicationPageModel::EscapeAuto, MeeGo Touch will take care of showing either a back button or a close button when a new page appears according to the page navigation history (MSceneManager::pageHistory()). MeeGo Touch will also automatically dismiss the current page when the back button is clicked, which will cause the previous one (i.e., the most recent in the page navigation history) to come back.
+This is the easiest navigation pattern to implement. Since escapeMode() of a page is by default set to MApplicationPageModel::EscapeAuto, MeeGo Touch either shows  a Back button or a Close button when a new page appears, according to the page navigation history (MSceneManager::pageHistory()). When the Back button is clicked, MeeGo Touch automatically dismisses the current page and displays the previous page (in other words, the most recent page in the page navigation history).
 
-Thus all you need to do is to make your next page appear. MeeGo Touch will take care of the rest.
+To implement this navigation pattern, create the required pages, and MeeGo Touch takes care of the rest.
 
 All files can be found at:
 \verbatim
