--- a/doc/src/plainqt.dox
+++ b/doc/src/plainqt.dox
@@ -1,48 +1,47 @@
 %TOC%
-/*! \page plainqt How to develop Qt applications for Maemo 5 and MeeGo
+/*! \page plainqt Developing Qt applications for Maemo 5 and MeeGo
 
 
 \section  audience  Audience
 
-This document targets established Qt developers who would like to use Qt to develop an application for Maemo5 or MeeGo, without the need to use the native frameworks, Hildon and MeeGo Touch respectively. Native development is not covered in this document.
+This section targets established Qt developers who would like to use Qt to develop an application for Maemo 5 or MeeGo, without the need to use the native frameworks, Hildon and MeeGo Touch, respectively. Native development is not covered in this section.
 
 
 \section  intro  Introduction
 
-Qt is a cross platform development framework. So the same source code for a Qt application can be compiled on different operating systems without changes and without any custom code. As a result your application will visually integrate into the given environment no matter whether it's Linux, Windows or Mac OS X.
+Since Qt is a cross-platform development framework, the same source code for a Qt application can be compiled on different operating systems without changes and without any custom code. As a result, your application visually integrates into the given environment, whether it is Linux, Windows, or Mac OS X.
 
-Of course this is also true for Maemo 5 and MeeGo: So compiling your Qt desktop application on the Maemo plattform will result in an application that will come very close to the native look and feel: On Maemo 5 your application will mimic the theming and the habits of applications that are built on top of the Hildon framework. And on MeeGo it will emulate the appearance and the behavior of "native" MeeGo Touch applications.
+This is, of course, also true for Maemo 5 and MeeGo. Compiling your Qt desktop application on the Maemo platform results in an application that comes very close to the native look and feel. On Maemo 5, your application mimics the theming and the habits of applications that are built on top of the Hildon framework. On MeeGo, it emulates the appearance and the behaviour of "native" MeeGo Touch applications.
 
-However there are several cases where the mobile form factor and the philosophy behind MeeGo Touch should be kept in mind when developing a Qt application that is supposed to be used on the MeeGo Touch platform. To address these and to guarantee a good experience for your users here are a few recommendations:
-
+When developing a Qt application for the MeeGo Touch platform, keep the mobile environment and the philosophy behind MeeGo Touch in mind. The following sections give some guidelines for ensuring a good user experience.
 
 \section  style  How Maemo 5 and MeeGo affect the look and feel of your application
 
-For both Maemo 5 and MeeGo your Qt application will adjust in terms of look and feel so that it will emulate the user interface of each platform:
+Your Qt application adjusts its look and feel on both Maemo 5 and MeeGo to emulate the user interface of each platform:
 
 - The "Maemo 5" style emulates the appearance of the Gtk-based Hildon framework. The Maemo 5 style is included with the special version of Qt that is shipped together with the N900 device series.
 - The "MeeGo" style mimics the widgets and interaction that is typical for the Qt-based MeeGo Touch framework. The MeeGo Touch style is part of the libmeegotouch framework and is shipped as one of its packages.
 
-Both styles take theme changes automatically into account. But the style is only an approximation of what a truly native application would look like. So there might be slight differences in terms of look and behaviour compared to a "real" Maemo 5 or MeeGo application. These differences can be reduced by taking certain typical requirements of these platforms into account.
+Both styles take theme changes automatically into account. However, since the style is not identical to a truly native application, there can be slight differences in terms of look and behaviour compared to a "real" Maemo 5 or MeeGo application. You can reduce these differences by taking certain typical requirements of the platforms into account.
 
-While the target framework and the implementations are different both styles share several characteristics. So if your style looks fine on one of the two platforms then it's quite likely that it will have a comparable appearance on the other platform as well.
+While the target framework and the implementations are different, both styles share several characteristics. Thus, if your style looks fine on one of the two platforms, it is quite likely that it has a comparable appearance on the other platform as well.
 
-Maemo5 and MeeGo Touch styles not only modify the theming but they also ensure that your application becomes finger usable and makes use of the default services and resources provided through each framework.
+Maemo 5 and MeeGo Touch styles not only modify the theming but they also ensure that your application becomes finger-usable and makes use of the default services and resources provided through each framework.
 
-Compared to other Qt styles the Maemo 5 and MeeGo Touch styles go way beyond simple widget styling. They have a significant impact on the way dialogs are shown:
+Compared to other Qt styles, the Maemo 5 and MeeGo Touch styles go way beyond simple widget styling. They have a significant impact on the way dialogs are shown:
 
 - The style automatically follows theme changes on Maemo 5 or MeeGo.
 - Feedback and gesture support is automatically added.
-- The virtual keyboard is supported out of the box
-- Menubars are not shown on top of the window or the screen. Instead they are activated via the navigation bar and are provided as finger usable dialogs.
-- Dialogs are always displayed full-width. They cover a significant portion of the screen.
-- Default dialogs (such as the file dialog) are automatically replaced by a Maemo conform replacement.
+- The virtual keyboard is supported out of the box.
+- Menu bars are not shown on top of the window or the screen. Instead, they are activated through the navigation bar and provided as finger-usable dialogs.
+- Dialogs are always displayed in their full width. They cover a significant portion of the screen.
+- Default dialogs (such as the file dialogue) are automatically replaced withMaemo equivalents.
 - The style provides kinetic scrolling for lists and scroll areas.
-- Scroll bars are only provided as indicators and only appear during scrolling.
-- The style provides orientation change support.
+- Scroll bars are only provided as indicators and appear during scrolling.
+- The style supports change in orientation.
 
 
-In Qt the style can be changed via the command line:
+In Qt, you can change the style from the command line:
 
 \code
 yourapp -style maemo5
@@ -54,106 +53,105 @@ or
 yourapp -style meegotouch
 \endcode
 
-Again note that the Maemo 5 style is only available as a part of the special Qt version that comes with Maemo 5 support. While the MeeGo Touch style is provided via the libmeegotouch framework.
-On both Maemo 5 and MeeGo Touch platform the platform style is used by default for plain Qt applications.
+Note: The Maemo 5 style is only available as a part of the special Qt version that comes with Maemo 5 support, while the MeeGo Touch style is provided by the libmeegotouch framework.
+On both Maemo 5 and MeeGo Touch platforms, the platform style is used by default for plain Qt applications.
 
-If you want to change this style to a different style then you can either do this via the \c -style command line parameter or in your source code via the \c QStyle API. However in general this is not recommended since the default styles provided with Qt are not finger usable.
+You can change the style either with the \c -style command line parameter or in your source code with the \c QStyle API. However, it is not generally recommended since the default styles provided with Qt are not finger-usable.
 
 
 \section  usability  Achieving a good user experience
 
-The user interface of the Maemo and MeeGo platform is optimized for the specific requirements of the device and for the needs of your target audience. This results in a user interface that is significantly different from the desktop paradigm.
+The user interface of the Maemo and MeeGo platform is optimised for the specific requirements of the device and the needs of your target audience. This results in a user interface that is significantly different from the desktop paradigm.
 
-Taking a look at your plain Qt application there are in general two scenarios for deployment:
+The deployment scenario for a plain Qt application is generally one of the following:
 
-- You're developing a true crossplatform plain Qt application. Your application uses the very same source code to cover all platforms.
-- Or you're working on a plain Qt application that is specifically optimized for use on the Maemo or MeeGo platform (or on mobile devices in general).
+- You are developing a true cross-platform plain Qt application. Your application uses the same source code to cover all platforms.
+- You are working on a plain Qt application that is specifically optimised for use on the Maemo or MeeGo platform (or on mobile devices in general).
 
-In either case the resulting user experience will most likely not match the quality of a true MeeGo Touch application. Nevertheless there's a set of recommendations we can provide. These recommendations can help you to come at least close and achieve a reasonable good user experience for your application:
+In both cases, it is most likely that the resulting user experience does not match the quality of a true MeeGo Touch application. Follow the recommendations below to improve the user experience provided by your application.
 
+\subsection taskoriented Creating a workflow-driven user interface
 
-\subsection taskoriented Create a user interface that is tailored to the user's workflow
+First and foremost, the user interface of Maemo or MeeGo applications is much simpler than a typical desktop application. This is due to the obvious limitations in terms of screen size. Due to these constraints, the application developer must understand the tasks performed by a user. This helps you create a user interface that does not get in the way of the user and is easy to use.
 
-First and foremost the user interface of Maemo or MeeGo applications is much more simplistic than a typical desktop application. This is due to the obvious limitations in terms of screen size. Due to these constrains the author of a mobile application needs to have a good understanding about the tasks that a user has got to perform. This will help to come up with a user interface that doesn't get in the way of the user and is easy to use.
-
-So if your application has been originally developed for the desktop then you should reconsider the user interface: Often enough desktop applications are unnecessarily cluttered with lots of controls. Such a "heavy" UI does not only exceed the space that is available on the mobile platform. It also typically overwhelms novice users on the desktop.
-So "streamlining" the UI will not only help you to create a good user experience on the mobile platform. It also has the benefit that your application will be easier to use on the desktop as well.
-"Streamlining" doesn't necessarily mean that you need to remove functionality. Often enough it means that you rearrange your UI so that it is more task driven and follows the actual workflow of the user.
-
+If your application has been originally developed for the desktop, reconsider the user interface. Desktop applications are often unnecessarily cluttered with controls. An over-loaded UI does not only exceed the space that is available on the mobile platform, but also typically overwhelms novice users on the desktop.
+Streamlining the UI helps you create a good user experience on the mobile platform and makes your application easier to use on the desktop as well.
+Streamlining does not necessarily mean that you need to remove functionality, often you just need to rearrange your UI so that it is more task-driven and follows the actual workflow of the user.
 
 \subsection sizeindependent Make your application independent of resolution and available size
 
-The N900 running Maemo is small device. MeeGo Touch will support a range of devices with different screen sizes.
-So it's important that despite the high resolution it's possible to easily recognize all visual parts of the UI from a reasonable distance.
-For normal ready-made QWidgets (like \c QPushButton, \c QMenu, etc.) the style will take care of this automatically.
-Note that for the styling of widgets we use the properties defined in the MeeGo Touch CSS. Therefore in some cases (like for fonts and geometries) we don't use the properties provided by Qt itself.
+The N900 running on Maemo is a small device, whereas MeeGo Touch supports a range of devices with different screen sizes.
+Thus, it is important that, despite the high resolution, it is possible to easily recognise all visual parts of the UI from a reasonable distance.
+For normal ready-made QWidgets (such as \c QPushButton, \c QMenu), the style takes care of this automatically.
+Note: The styling of widgets is carried out according to the properties defined in the MeeGo Touch CSS. Therefore, in some cases (such as with fonts and geometries), the properties provided by Qt itself are not used.
 
-For custom widgets and views you should avoid hardcoding sizes whenever possible. Instead it's better to
+Whenever possible, instead of hard-coding custom widgets and views:
 
-- either use layouts which grow to the available size
-- or use the dpi information provided by the style to calculate a reasonable physical size for the object that you want to display.
+- Use layouts that can be expanded to the available size.
+- Use the dpi information provided by the style to calculate a reasonable physical size for the displayed object.
 
-Also it needs to be possible to resize the application window and dialogs so that they fit into the space that is horizontally available on the device. On the N900 the width of the display in landscape mode is 800 pixels. So your application needs to fit into this minimum screen width. Of course you should also consider lengthy translations when designing the UI of your application.
+It also needs to be possible to resize the application window and dialogs so that they fit into the space that is horizontally available on the device. On the N900 the width of the display in landscape mode is 800 pixels. So your application needs to fit into this minimum screen width. When designing the UI of your application, you should also consider that the translated texts may require more space.
 
-Toolbars should only contain the most important features that are necessary for performing tasks. Ideally the whole toolbar should fit completely onto the screen.
+Tool bars should only contain the most important features that are necessary for performing tasks. Ideally, the whole tool bar should fit completely onto the screen.
 
 
-\subsection fingerusable Ensure that your application stays finger usable
+\subsection fingerusable Ensure that your application stays finger-usable
 
-The MeeGo Touch framework allows navigation via the touch of your fingers.
-This means that you need to think carefully about the size of custom widgets. But it also means that all available functionality needs to be accessible via a "left mouse button click" or gestures.
-In general there are a few common pitfalls which result from the faulty assumption that the user is using a mouse pointer:
+The MeeGo Touch Framework allows users to navigate by using their fingers.
+This means that you need to think carefully about the size of custom widgets and ensure that all functionalities are accessible with a left-click or gestures.
+There are some common pitfalls resulting from the faulty assumption that the user is using a mouse pointer. To avoid these:
 
-- Double click should be avoided.
-- Context menus (which usually get invoked via a right mouse button click) are available via tap&hold interaction and should not be used for primary interactions.
+- Double-click should be avoided.
+- Context menus (which are usually invoked with a right-click) are available through tap and hold interaction and should not be used for primary interactions.
 - Dragging operations are not supported typically as they conflict with panning.
-- Touch displays don't support "hovering". So mouse hovering should be avoided as the only way to accessing functionality provided by the application.
-- Both frameworks switch off the cursor ("mouse pointer") of the application. So your application should be usable even if the cursor isn't visible on the screen.
-- There is no concept such as a visible widget focus rect. So you application needs to be intuitively usable without those.
-- Don't use your own styling on QWidgets. This means not setting a custom style to the widget, using CSS for the widget or even manipulating the widget's palette. This might be ignored by the Meegotouch Qt style or even break the styling up to making the widget unusable.
+- Touch displays do not support "hovering". Thus, avoid mouse hovering as the only way to access a functionality provided by the application.
+- Both frameworks switch off the cursor ("mouse pointer") of the application. So your application should be usable even if the cursor is not visible on the screen.
+- Since there is no such concept as a visible widget focus rectangle, your application needs to be intuitively usable without them.
+- Do not use your own styling on QWidgets. This means that you should not set a custom style to a widget, use CSS for a widget, or even manipulate a widget's palette. Your own styling may be ignored by the MeeGo Touch Qt style or even break the styling and make the widget unusable.
 
 
 \section avoid Things to avoid
 
 \subsection avoidWidgets Avoid fancy widgets
 
-There are a few classes which don't get styled in the MeeGo Touch style or look out of place. Please try to avoid these:
+There are a few classes which are either not styled by the MeeGo Touch style or are otherwise inconsistent. Try to avoid the following:
 
 - \c QDial
 - \c QLCDNumber
 - \c QMdiArea, \c QMdiSubWindow (as well as the whole MDI concept)
 - \c QSplitter
-- \c QSystemTrayIcon (since Maemo doesn't support the system tray)
+- \c QSystemTrayIcon (since Maemo does not support the system tray)
 - \c QToolBox
 - \c QToolTip
 
 \subsection avoidClever Avoid overly clever UI design
 
-Furthermore there are a few more things you should avoid:
+Avoid too complex UI design by following these guidelines: 
 
-- You should avoid hardcoding sizes and colors
-- Avoid complex layouts
-- Don't display multiple windows at once. Use a set of modal dialogs instead which appear in the order of the work flow.
-- Kinetic scrolling is provided by the Maemo styles already. So in order to avoid clashes you shouldn't provide your own custom kinetic scrolling implementation for listviews and scrollareas.
-- Don't use \c QObject::disconnect() to disconnect all signals from a widget and don't disconnect any signals from any widget, which were not connected by yourself.
-- Don't remove any eventFilter classes from any widgets you didn't install by yourself.
-- Avoid setting widget flags manually. Especially flags that affect the painting may cause screwed up results.
+- Do not hardcode sizes and colours.
+- Avoid complex layouts.
+- Do not display multiple windows at once. Instead, use a set of modal dialogs which appear in the order of the workflow.
+- Do not provide your own custom kinetic scrolling implementation for list views and scroll areas. Kinetic scrolling is provided by the platform styles already and custom implementation may cause clashes. 
+- Do not use \c QObject::disconnect() to disconnect all widget signals.
+- Do not disconnect any widget signals that you have not connected yourself.
+- Do not remove any eventFilter classes from widgets that you did not install yourself.
+- Do not set widget flags manually. Especially flags that affect the painting may cause invalid results.
 
-There are also some non-standard practices that don't prevent the style from working, but should be considered when the style delivers unexpected results:
+There are also some non-standard practices that do not prevent the style from working. However, if the style delivers unexpected results, take these issues into account:
 
-- Qt untypical behavior of your application may cause problems, e.g. setting modal flag on a QWidget and then showing it with \c QWidget::show().
-- Custom widgets can't be fully adopted by the style and will be treated as blanc QWidgets. Their background may be removed and due to the widget will not be scaled, it may be unusable on the device's display. If this is the case then you might want to use the \c NoDuiStyle dynamic property as described above.
+- If the behaviour of your application is untypical of Qt, this may cause problems. For example, if the application sets a modal flag on a QWidget and then shows it with \c QWidget::show().
+- Custom widgets cannot be fully adopted by the style and are treated as blank QWidgets. Since the widget background may be removed and, due to the widget, may not be scaled, it may be unusable on the device's display. If this is the case, you can use the \c NoDuiStyle dynamic property as described above.
 
 \subsection avoidTimer Keep the battery in mind
 
-Power saving is especially important for applications that are running on a mobile platform:
+Power saving is especially important for applications that run on a mobile platform:
 
-- Avoid having instances of \c QTimer running permanently in your application. \c QTimer will repeatedly wake up your CPU. Therefore you should keep the use of \c QTimer low.
+- Avoid instances of \c QTimer running permanently in your application. \c QTimer repeatedly wakes up your CPU. Therefore you should keep the use of \c QTimer low.
 
 
 \section maemo5widgets Maemo 5 widgets
 
-There are a few widgets which are specific for the Maemo 5 platform
+The following widgets are specific for the Maemo 5 platform:
 
 - \c QMaemo5AbstractPickSelector
 - \c QMaemo5DatePickSelector
@@ -164,31 +162,31 @@ There are a few widgets which are specific for the Maemo 5 platform
 - \c QMaemo5TimePickSelector
 - \c QMaemo5ValueButton
 
-Use of these widgets is discouraged since they will most likely not be part of the MeeGo Touch platform.
+It is not recommended that you use these widgets since it is most likely that they will not be included in the MeeGo Touch platform.
 
 
 \section API MeeGo Touch Qt style API
 
-There is an API to influence the style on MeeGo Touch. This is done via setting dynamic propertys and using litteral strings because we don't wan't to need to include any headers from MeeGo Touch or even link against any Meegotouch library, to keep the plain Qt application independent from the target platform.
+The MeeGo Touch Qt style API determines the style on MeeGo Touch. The style is set with dynamic properties and literal strings to avoid headers from MeeGo Touch or linking against any MeeGo Touch library. Thus, the plain Qt application is independent of the target platform.
 
-If you want to disable styling for your own custom widget then you can do this via the dynamic property \c NoMStyle. For a custom widget instance "mywidget" it would look like this:
+To disable styling for your own custom widget, use the dynamic property \c NoMStyle. For a custom widget instance "mywidget", it would be:
 
 \code
     mywidget->setProperty("NoMStyle", true);
 \endcode
 
-Doing this should only be done if the style renders a certain custom widget unusable. In practice this should stay the rare exception.
-Note: This only disables styling for this particular widget. It does NOT affect children of "mywidget"!
+Disable styling only if the style renders a certain custom widget unusable, which is very rare in practice.
+Note: This only disables styling for this particular widget. It does not affect the children of "mywidget".
 
-If you run into real problems with the style or if you want to completely disable the meegotouch qt style for your application then you can set the dynamic property also directly for QApplication:
+If you run into problems with the style or want to completely disable the MeeGo Touch Qt style for your application, you can also set the dynamic property directly for QApplication:
 
 \code
     qApp->setProperty("NoMStyle", true);
 \endcode
 
-With the MeeGo Touch Qt style you can also disable some elements, added by the style, e.g. the statusbar or the navigation bar.
+With the MeeGo Touch Qt style you can also disable some elements that are added by the style, for example, the status bar or the navigation bar.
 
-Disabling the statusbar:
+Disabling the status bar:
 \code
     qApp->setProperty("NoMStatusBar", true);
 \endcode
@@ -198,9 +196,9 @@ Disabling the navigation bar:
     qApp->setProperty("NoMNavigationBar", true);
 \endcode
 
-When disabling the navigation bar your application doesn't have close and minimize buttons anymore, so the developer has to care for closing and minimizing the application himself.
+When disabling the navigation bar, your application does not display the Close and Minimise buttons anymore. Thus, the developer needs to close and minimise the application.
 
-The style also provides a basic API for supporting orientation changes on the device. For most QWidget based Qt applications it's difficult to implement an orientation change, but for some cases, e.g. QML or QGraphicsView based applications it can be useful. Therefore the orientation change support of the style is opt-in which means the application needs to tell the style whether it would like to support the orientation change.
+The style also provides a basic API for supporting orientation changes on the device. For most QWidget-based Qt applications it is difficult to implement an orientation change, but for some cases, such as QML- or QGraphicsView-based applications, it can be useful. Therefore the orientation change support of the style is opt-in which means the application needs to tell the style whether it would like to support the orientation change.
 Note: The orientation change support only adjusts the window decorations to the new orientation. You have to take care of rotating the application's content yourself!
 
 You can activate the orientation change for your application like this:
@@ -219,29 +217,29 @@ additionally you can always ask the style about its current orientation by calli
     QMetaObject::invokeMethod(style(), "orientation", Q_RETURN_ARG(int, orientation));
 \endcode
 
-You can also look at qtstyleorientation demo application which shortly demonstrates how orientation change works.
+You can also look at the qtstyleorientation demo application which shortly demonstrates how orientation change works.
 
 The orientation change support is not fully implemented yet. It rotates the statusbar and the navigation bar, but menus and dialogs are not getting rotated yet.
 
 
-Here are a few screen shots comparing the very same view of the same application on both maemo plattforms:
+The following figures illustrate the same view of an application on both supported platforms:
 
-\image html qtstyleexample-pizza-freemantle.png "Example application on Maemo 5 (Freemantle)"
+\image html qtstyleexample-pizza-freemantle.png "Example application on Maemo 5 (Fremantle)"
 
 \image html qtstyleexample-pizza-harmattan.png "Example application on MeeGo"
 
 
-\section  limitations Limitations of the Qt support compared to native MeeGo Touch applications
+\section  limitations Limitations of Qt support compared to native MeeGo Touch applications
 
-Since MeeGo Touch and its widgets are based on \c QGraphicsView there are a few things that can't be emulated for plain \c QWidget based widgets. So these are features of MeeGo Touch which can not be supported by the maemo styles:
+Since MeeGo Touch and its widgets are based on \c QGraphicsView, some features cannot be emulated for plain \c QWidget-based widgets. The following MeeGo Touch features cannot be supported by the Maemo styles:
 
-- Orientation change for ready-made \c QWidgets (not possible on MeeGo). Orientation change notification for custom widgets can be accessed via the Qt Mobility framework.
+- Orientation change for ready-made \c QWidgets (not possible on MeeGo). Orientation change notification for custom widgets can be accessed through the Qt Mobility framework.
 - Ready-made MeeGo Touch widget animations and effects (except for some common ones)
 
 
-\section knownissues Known issues and pit falls
+\section knownissues Known issues and common problems
 
-- Be careful with top level widgets: The style takes care of window management. To accomplish this all top-level windows get reparented into a new layout. This breaks part of Qt's API promise: Windows that are created by the application developer can't later on be indentified or accessed via methods such as \c QWidget::window() or \c QWidget::activeWindow().
+- Be careful with top-level widgets: The style takes care of window management. To accomplish, this all top-level windows are reparented into a new layout. This does not fully comply with the Qt's API promise, since windows created by the application developer cannot be identified or accessed later on with methods such as \c QWidget::window() or \c QWidget::activeWindow().
 
-- "Stacked Windows": At this point the concept of "stacked windows" is not supported.
+- "Stacked windows": At this point the concept of "stacked windows" is not supported.
 */
