--- a/doc/src/sceneandscenewindows.dox
+++ b/doc/src/sceneandscenewindows.dox
@@ -1,19 +1,19 @@
-/*! \page sceneandscenewindows The scene and its scene windows
+/*! \page sceneandscenewindows Scene and scene windows
 
-All graphical items of a MeeGo Touch application are positioned in a Cartesian plane which we call "scene". The scene is represented by the <code>MScene</code> class. The X-axis grows rightwards and the Y-axis downwards.
+All graphical items of a MeeGo Touch application are positioned in a Cartesian plane called a "scene". The scene is represented by the <code>MScene</code> class. The X-axis expands from left to right and the Y-axis expands from top to bottom.
 
-What is seen through an MApplicationWindow is just a rectangular area of that scene. This rectangle has its top left corner on (0, 0). Its width and height are equivalent to the device's horizontal and vertical pixel resolution, respectively.
+An MApplicationWindow only shows a rectangular area of the scene. The rectangle has its top left corner at "0, 0". Its width and height are equivalent to the horizontal and vertical pixel resolution of the device, respectively.
 
 \image html "scene and view.png" "MScene and MApplicationWindow"
 
-Scene windows are the graphical items that comprise the high-level layout of a MeeGo Touch application. Virtually all graphical items in a standard MeeGo Touch application are held in a scene window of some type. They are represented by the <code>MSceneWindow</code> class. Scene windows in a scene are analogous to top level windows in a traditional desktop windowing system.
+Scene windows are the graphical items that comprise the high-level layout of a MeeGo Touch application. Virtually all graphical items in a standard MeeGo Touch application are held in a scene window. They are represented by the <code>MSceneWindow</code> class. Scene windows in a scene correspond to top-level windows in a traditional desktop window system.
 
 \image html "scene windows.png" "The basic scene windows of a MeeGo Touch application"
 
-The stacking order (Z-value) and geometry (position and size) of scene windows are controlled by a scene manager (<code>MSceneManager</code>). When the device orientation changes, the scene manager orchestrates the rotation and repositioning of all its scene windows. In order to properly rotate the UI, the scene manager have all its scene windows inside a graphical item called <i>root element</i> (meaning that it is the parent of all scene windows in the scene graph), which gets rotated instead of the scene windows themselves. This means that scene windows are positioned in the root element's coordinate system, not in scene coordinates. MeeGo Touch defines four possible rotation angles for its UI: 0, 90, 180 and 270 degrees (clockwise).
+A scene manager (<code>MSceneManager</code>) controls the stacking order (Z-value) and geometry (position and size) of scene windows. When the device orientation changes, the scene manager rotates and repositions all the scene windows. In order to properly rotate the UI, all the scene windows of the scene manager are located inside a graphical item called <i>root element</i> (which means that it is the parent of all scene windows in the scene graph). The root element is rotated instead of the scene windows themselves. This means that scene windows are positioned in the root element's coordinate system, not in scene coordinates. MeeGo Touch defines four possible rotation angles for its UI: 0, 90, 180 and 270 degrees (clockwise).
 
 \image html "root element and scene window.png" "A scene window at different orientation angles"
 
-<code>MApplicationWindow</code> creates its own <code>MScene</code> and <code>MSceneManager</code>. It also automatically populates the scene with all the scene windows that comprise a standard MeeGo Touch GUI, such as a status bar, navigation bar, home button panel, etc.
+<code>MApplicationWindow</code> creates its own <code>MScene</code> and <code>MSceneManager</code>. It also automatically populates the scene with all the scene windows that comprise a standard MeeGo Touch GUI, such as a status bar, navigation bar, home button panel, and so one.
 
 */
