--- a/doc/src/styling_concepts.dox
+++ b/doc/src/styling_concepts.dox
@@ -1,28 +1,32 @@
 /*! \page styling_concepts Basic concepts
 
-    A style in MeeGo Touch contains key-value pairs ("attributes"), that are used when the stylable object
-    is drawn to the screen. A style attribute has always three properties:
-    Type, name, and value. As an example, a good style attribute could be something like pen color, margin or
+    A style in MeeGo Touch contains key-value pairs ("attributes") that are used when the stylable object
+    is drawn to the screen. A style attribute always has the following properties: 
+	- type 
+	- name
+	- value
+
+	For example, a good style attribute could be something like pen colour, margin, or
     text font. Style attributes are defined in the source code and their values are defined in the style
     sheet(s).
 
     MeeGo Touch styles can be inherited. It means that the derived style can introduce new style
     attributes on top of the 'base' style and it can even override the values for the attributes that are
-    being derived. This behavior is defined on the source code level by software designers.
+    being derived. This behaviour is defined at the source code level by software designers.
 
-    Responsibilities of the style system components:
-    - Theme provides styles for the stylable object
-    - Style contains a set of style attributes
-    - Style gets initialized from the style sheet(s)
+    Style system components have the following responsibilities:
+    - Theme provides styles for the stylable object.
+    - Style contains a set of style attributes.
+    - Style is initialised from the style sheet(s).
 
-    \image html style_basic.png "The basic building blocks of the styling system."
+    \image html style_basic.png "Basic building blocks of the styling system"
 
-    Styling in MeeGo Touch always includes at least three steps, these are:
+    Styling in MeeGo Touch always includes at least the following steps:
     - Defining the style in the source code
     - Defining values for the attributes in the style sheet(s)
     - Accessing the defined style values from within the source code
 
-    These steps ensure that you will have a configurable style for your stylable object. It provides
+    These steps ensure that you have a configurable style for your stylable object. It provides
     a type-safe class for application developers to access the style, while allowing the UI designers to
     configure the styling as needed through the style sheets. This is the basic form of styling in MeeGo Touch.
 */
